# mines-gaming

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/assets/: index.css  index.js
app/templates/: index.html
